--- a/src/components/Dash.css
+++ b/src/components/Dash.css
@@ -1,8 +1,48 @@
-.Main {
-    height: 80vh;
 
+
+.Main {
+    position:static;
 }
 
 .tk {
-    height: 75vh;
+    width: 100%;
+    left:0%;
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+/* .kt {
+    height: 100vh;
+    width: 28vw;
+    display:inline-block;
+} */
+
+/* .photo {
+    position: relative;
+    text-align: center;
+    color: white;
+  } */
+
+.text {
+    color: #720505;
+    text-shadow: 3px 3px 4px #550000;
+    font-family: 'abiggail';
+    font-Size: 120px;
+    position: absolute;
+    top: 80%;
+    left:475px;
+    transform: translate(-30%, -30%);
+}
+
+.text1 {
+    color: rgb(233, 227, 214);
+    text-shadow: 3px 3px 2px rgb(41, 40, 39);;
+    font-family: 'drugs';
+    font-size: 20px;
+    letter-spacing: 6px;
+    position: absolute;
+    top: 90%;
+    left:600px;
+    transform: translate(-40%, -40%);
 }
