--- a/src/components/Dash.css
+++ b/src/components/Dash.css
@@ -46,3 +46,86 @@
     left:600px;
     transform: translate(-40%, -40%);
 }
+
+.info {
+    /* left: 45%; */
+    transform: translate(-40%, -40%);
+    position: static;
+    text-align: center;
+    display: inline;
+    width: 100%;
+    background-color: rgb(233, 227, 214);
+}
+
+.header{
+    font-family: 'abiggail';
+    font-size: 90px;
+    text-shadow: 3px 3px 4px #550000;
+}
+
+.bride{
+    display: inline-block;
+    position: relative;
+    left: 25%;
+}
+
+.groom{
+    display: inline-block;
+    position: relative;
+    left: 35%;
+}
+
+.moh{
+    display: inline-block;
+    position:relative;
+    top: 400px;
+    right: 25%;
+}
+
+.best-man{
+    display: inline-block;
+    position:relative;
+    top: 400px;
+    right: 35%;
+}
+
+.bm{
+    display: inline-block;
+    position:relative;
+    top: 400px;
+    left: 35%;
+}
+
+.gm{
+    display: inline-block;
+    position:relative;
+    top: 400px;
+    left: 35%;
+}
+
+.bm2{
+    display: inline-block;
+    position:relative;
+    top: 800px;
+}
+
+.gm2{
+    display: inline-block;
+    position:relative;
+    top: 800px;
+}
+
+.bm3{
+    display: inline-block;
+    position:relative;
+    top: 1200px;
+    right: 40%;
+}
+
+.gm3{
+    display: inline-block;
+    position:relative;
+    top: 800px;
+    left: 50%;
+}
+
