--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,3 +13,17 @@
     color: rgb(233, 227, 214);
     text-shadow: 1px 1px rgba(0,0,0,0.7);
 }
+
+.un{
+    font-size: 15px;
+    color: rgb(233, 227, 214);
+}
+
+.pw{
+    font-size: 15px;
+    color: rgb(233, 227, 214);
+}
+
+.auth {
+    right: 50%;
+}
