--- a/src/components/Registry.css
+++ b/src/components/Registry.css
@@ -1,20 +1,34 @@
 .container {
-    background-color: indigo;
+    /* background-color: indigo; */
+    height: 100%;
 
 }
 
 .item {
-    background-color: lawngreen;
-    height: 30px;
+    background-color: rgb(197, 191, 176);
+    height: 50px;
+    display: inline-block;
+    padding: 10px;
+    margin: 5px;
+
+}
+
+.purchase {
+    background-color: rgb(197, 191, 176);
+    height: 50px;
     display: inline-block;
     padding: 10px;
     margin: 5px;
 }
 
-.purchase {
-    background-color: lightcoral;
-    height: 30px;
-    display: inline-block;
-    padding: 10px;
-    margin: 5px;
+.registry {
+    font-family: 'abiggail';
+    font-size: 80px;
+    position:absolute;
+    left:45%;
+}
+
+.cart {
+    font-family: 'drugs';
+    font-size: 30px;
 }
