--- a/src/components/Registry.css
+++ b/src/components/Registry.css
@@ -6,11 +6,12 @@
 
 .item {
     background-color: rgb(197, 191, 176);
-    height: 50px;
+    height: 100px;
     display: inline-block;
     padding: 10px;
     margin: 5px;
-
+    position: relative;
+    top: 4%;
 }
 
 .purchase {
@@ -19,6 +20,8 @@
     display: inline-block;
     padding: 10px;
     margin: 5px;
+    position: relative;
+    top: 220px;
 }
 
 .registry {
@@ -31,4 +34,6 @@
 .cart {
     font-family: 'drugs';
     font-size: 30px;
+    position: absolute;
+    top: 70%;
 }
