--- a/src/components/Registry.css
+++ b/src/components/Registry.css
@@ -1,39 +1,44 @@
 .container {
     /* background-color: indigo; */
     height: 100%;
-
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .item {
     background-color: rgb(197, 191, 176);
     height: 100px;
+    width: 100px;
     display: inline-block;
     padding: 10px;
     margin: 5px;
     position: relative;
-    top: 4%;
+    /* top: 4%; */
 }
 
 .purchase {
     background-color: rgb(197, 191, 176);
-    height: 50px;
+    height: 100px;
+    width: 100px;
     display: inline-block;
     padding: 10px;
     margin: 5px;
     position: relative;
-    top: 220px;
+    /* top: 200px; */
 }
 
 .registry {
     font-family: 'abiggail';
     font-size: 80px;
-    position:absolute;
-    left:45%;
+    position:relative;
+    /* left:45%; */
+    align-items: center;
+    justify-content: space-around;
 }
 
 .cart {
     font-family: 'drugs';
     font-size: 30px;
-    position: absolute;
+    position: relative;
     top: 70%;
 }
