--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -12,6 +12,7 @@
     font-family: 'abiggail';
     color: rgb(233, 227, 214);
     text-shadow: 1px 1px rgba(0,0,0,0.7);
+    text-decoration: none;
 }
 
 .un{
